Fix viewport background invalidation when HTML size changes

Non-fixed-attachment viewport background uses root element as the
background positioning area. If HTML size changes, and the background
needs paint invalidation on the resize, we should invalidate the
LayoutView.

BUG=688596
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2699463004
Cr-Commit-Position: refs/heads/master@{#451265}

Former-commit-id: d34bb14bf30e4885f704336b0658cd32ba01e108