third_party/WebKit/Source/platform/graphics/PaintInvalidationReason.h
@@ -35,6 +35,7 @@ enum PaintInvalidationReason {
   PaintInvalidationSVGResourceChange,
   PaintInvalidationBackgroundOnScrollingContentsLayer,
   PaintInvalidationCaret,
+  PaintInvalidationViewBackground,
   PaintInvalidationForTesting,
   // PaintInvalidationDelayedFull means that PaintInvalidationFull is needed in
   // order to fully paint the content, but that painting of the object can be
